// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emailLayout > omits optional sections cleanly when absent 1`] = `
"
    <body style="margin: 0; padding: 0; background: #fafafa;">
      
      <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background: #fafafa; padding: 32px 16px;">
        <tr>
          <td align="center">
            <table role="presentation" cellpadding="0" cellspacing="0" width="600" style="max-width: 600px; width: 100%; background: #ffffff; border: 1px solid #e4e4e7; border-radius: 16px; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
              <tr>
                <td style="background: #18181b; padding: 18px 28px;">
                  <span style="color: #ffffff; font-size: 18px; font-weight: 700; letter-spacing: 0.18em;">PRNTD</span>
                </td>
              </tr>
              <tr>
                <td style="padding: 32px 28px 36px;">
                  
                  <h1 style="color: #18181b; font-size: 21px; font-weight: 700; margin: 0 0 12px; text-align: center;">Bare</h1>
                  
                  
                  
                </td>
              </tr>
              <tr>
                <td style="border-top: 1px solid #e4e4e7; padding: 20px 28px; text-align: center;">
                  <p style="color: #71717a; font-size: 12px; margin: 0;">PRNTD · <a href="https://prntd.org" style="color: #71717a; text-decoration: none;">prntd.org</a> · <a href="mailto:hello@prntd.org" style="color: #71717a; text-decoration: none;">hello@prntd.org</a></p>
                </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </body>"
`;

exports[`emailLayout > renders the shared wrapper (header, card, footer, CTA, hero) stably 1`] = `
"
    <body style="margin: 0; padding: 0; background: #fafafa;">
      <span style="display:none!important;opacity:0;color:transparent;height:0;width:0;overflow:hidden;">Preheader text</span>
      <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background: #fafafa; padding: 32px 16px;">
        <tr>
          <td align="center">
            <table role="presentation" cellpadding="0" cellspacing="0" width="600" style="max-width: 600px; width: 100%; background: #ffffff; border: 1px solid #e4e4e7; border-radius: 16px; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
              <tr>
                <td style="background: #18181b; padding: 18px 28px;">
                  <span style="color: #ffffff; font-size: 18px; font-weight: 700; letter-spacing: 0.18em;">PRNTD</span>
                </td>
              </tr>
              <tr>
                <td style="padding: 32px 28px 36px;">
                  
    <table role="presentation" cellpadding="0" cellspacing="0" align="center" style="margin: 0 auto 28px;">
      <tr>
        <td align="center" valign="top" style="padding: 0 8px;">
          <div style="background: #f4f4f5; border-radius: 12px; padding: 14px; line-height: 0;">
            <img src="https://mock.example/front-mockup.png" width="200" alt="Front design" style="display: block; width: 200px; max-width: 100%; height: auto; border-radius: 6px;" />
          </div>
          <div style="color: #71717a; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; margin-top: 8px;">Front</div>
        </td>
        <td align="center" valign="top" style="padding: 0 8px;">
          <div style="background: #0c0c0c; border-radius: 12px; padding: 14px; line-height: 0;">
            <img src="https://img.example/back-artwork.png" width="200" alt="Back design" style="display: block; width: 200px; max-width: 100%; height: auto; border-radius: 6px;" />
          </div>
          <div style="color: #71717a; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; margin-top: 8px;">Back</div>
        </td></tr>
    </table>
                  <h1 style="color: #18181b; font-size: 21px; font-weight: 700; margin: 0 0 12px; text-align: center;">A heading</h1>
                  <p style="color: #52525b; font-size: 15px; line-height: 1.5; margin: 0 0 24px;">An intro paragraph.</p>
                  <p>Body</p>
                  <p style="margin: 4px 0 0;"><a href="https://prntd.org/thing" style="display: inline-block; padding: 11px 22px; background: #18181b; color: #fff; text-decoration: none; border-radius: 8px; font-size: 14px; font-weight: 600;">Do the thing</a></p>
                </td>
              </tr>
              <tr>
                <td style="border-top: 1px solid #e4e4e7; padding: 20px 28px; text-align: center;">
                  <p style="color: #71717a; font-size: 12px; margin: 0;">PRNTD · <a href="https://prntd.org" style="color: #71717a; text-decoration: none;">prntd.org</a> · <a href="mailto:hello@prntd.org" style="color: #71717a; text-decoration: none;">hello@prntd.org</a></p>
                </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </body>"
`;

exports[`sendOrderConfirmation > multi-line cart order without display name > html 1`] = `
"
    <body style="margin: 0; padding: 0; background: #fafafa;">
      <span style="display:none!important;opacity:0;color:transparent;height:0;width:0;overflow:hidden;">Your Classic Tee and 1 more is being printed.</span>
      <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background: #fafafa; padding: 32px 16px;">
        <tr>
          <td align="center">
            <table role="presentation" cellpadding="0" cellspacing="0" width="600" style="max-width: 600px; width: 100%; background: #ffffff; border: 1px solid #e4e4e7; border-radius: 16px; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
              <tr>
                <td style="background: #18181b; padding: 18px 28px;">
                  <span style="color: #ffffff; font-size: 18px; font-weight: 700; letter-spacing: 0.18em;">PRNTD</span>
                </td>
              </tr>
              <tr>
                <td style="padding: 32px 28px 36px;">
                  
                  <h1 style="color: #18181b; font-size: 21px; font-weight: 700; margin: 0 0 12px; text-align: center;">Your order is confirmed</h1>
                  <p style="color: #52525b; font-size: 15px; line-height: 1.5; margin: 0 0 24px;">Your Classic Tee and 1 more is being printed. You'll get another email with tracking when it ships.</p>
                  <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse; margin: 0 0 24px;"><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Order</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;  font-family: ui-monospace, SFMono-Regular, Menlo, monospace; ">abcd1234</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Classic Tee</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;   ">Black / M</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Box Tee ×2</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;   ">White / L</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; border-top: 1px solid #e4e4e7;">Total</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b; font-weight: 600;  border-top: 1px solid #e4e4e7;">$43.55</td>
  </tr></table>
                  <p style="margin: 4px 0 0;"><a href="https://prntd.org/orders" style="display: inline-block; padding: 11px 22px; background: #18181b; color: #fff; text-decoration: none; border-radius: 8px; font-size: 14px; font-weight: 600;">View your orders</a></p>
                </td>
              </tr>
              <tr>
                <td style="border-top: 1px solid #e4e4e7; padding: 20px 28px; text-align: center;">
                  <p style="color: #71717a; font-size: 12px; margin: 0;">PRNTD · <a href="https://prntd.org" style="color: #71717a; text-decoration: none;">prntd.org</a> · <a href="mailto:hello@prntd.org" style="color: #71717a; text-decoration: none;">hello@prntd.org</a></p>
                </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </body>"
`;

exports[`sendOrderConfirmation > multi-line cart order without display name > subject 1`] = `"Order confirmed — abcd1234 (Black M +1 more)"`;

exports[`sendOrderConfirmation > single-line order with display name > html 1`] = `
"
    <body style="margin: 0; padding: 0; background: #fafafa;">
      <span style="display:none!important;opacity:0;color:transparent;height:0;width:0;overflow:hidden;">Your Classic Tee is being printed.</span>
      <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background: #fafafa; padding: 32px 16px;">
        <tr>
          <td align="center">
            <table role="presentation" cellpadding="0" cellspacing="0" width="600" style="max-width: 600px; width: 100%; background: #ffffff; border: 1px solid #e4e4e7; border-radius: 16px; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
              <tr>
                <td style="background: #18181b; padding: 18px 28px;">
                  <span style="color: #ffffff; font-size: 18px; font-weight: 700; letter-spacing: 0.18em;">PRNTD</span>
                </td>
              </tr>
              <tr>
                <td style="padding: 32px 28px 36px;">
                  
    <table role="presentation" cellpadding="0" cellspacing="0" align="center" style="margin: 0 auto 28px;">
      <tr>
        <td align="center" valign="top" style="padding: 0 8px;">
          <div style="background: #f4f4f5; border-radius: 12px; padding: 14px; line-height: 0;">
            <img src="https://mock.example/front-mockup.png" width="280" alt="Front design" style="display: block; width: 280px; max-width: 100%; height: auto; border-radius: 6px;" />
          </div>
          
        </td></tr>
    </table>
                  <h1 style="color: #18181b; font-size: 21px; font-weight: 700; margin: 0 0 12px; text-align: center;">Your order is confirmed</h1>
                  <p style="color: #52525b; font-size: 15px; line-height: 1.5; margin: 0 0 24px;">Your Classic Tee is being printed. You'll get another email with tracking when it ships.</p>
                  <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse; margin: 0 0 24px;"><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Design</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;   ">Midnight Fox</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Order</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;  font-family: ui-monospace, SFMono-Regular, Menlo, monospace; ">abcd1234</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Classic Tee</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;   ">Black / M</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; border-top: 1px solid #e4e4e7;">Total</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b; font-weight: 600;  border-top: 1px solid #e4e4e7;">$24.12</td>
  </tr></table>
                  <p style="margin: 4px 0 0;"><a href="https://prntd.org/orders" style="display: inline-block; padding: 11px 22px; background: #18181b; color: #fff; text-decoration: none; border-radius: 8px; font-size: 14px; font-weight: 600;">View your orders</a></p>
                </td>
              </tr>
              <tr>
                <td style="border-top: 1px solid #e4e4e7; padding: 20px 28px; text-align: center;">
                  <p style="color: #71717a; font-size: 12px; margin: 0;">PRNTD · <a href="https://prntd.org" style="color: #71717a; text-decoration: none;">prntd.org</a> · <a href="mailto:hello@prntd.org" style="color: #71717a; text-decoration: none;">hello@prntd.org</a></p>
                </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </body>"
`;

exports[`sendOrderConfirmation > single-line order with display name > subject 1`] = `"Order confirmed — Midnight Fox (Black M)"`;

exports[`sendOwnerOrderAlert > renders the admin alert with discount and design rows > html 1`] = `
"
    <body style="margin: 0; padding: 0; background: #fafafa;">
      
      <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background: #fafafa; padding: 32px 16px;">
        <tr>
          <td align="center">
            <table role="presentation" cellpadding="0" cellspacing="0" width="600" style="max-width: 600px; width: 100%; background: #ffffff; border: 1px solid #e4e4e7; border-radius: 16px; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
              <tr>
                <td style="background: #18181b; padding: 18px 28px;">
                  <span style="color: #ffffff; font-size: 18px; font-weight: 700; letter-spacing: 0.18em;">PRNTD</span>
                </td>
              </tr>
              <tr>
                <td style="padding: 32px 28px 36px;">
                  
    <table role="presentation" cellpadding="0" cellspacing="0" align="center" style="margin: 0 auto 28px;">
      <tr>
        <td align="center" valign="top" style="padding: 0 8px;">
          <div style="background: #f4f4f5; border-radius: 12px; padding: 14px; line-height: 0;">
            <img src="https://mock.example/front-mockup.png" width="280" alt="Front design" style="display: block; width: 280px; max-width: 100%; height: auto; border-radius: 6px;" />
          </div>
          
        </td></tr>
    </table>
                  <h1 style="color: #18181b; font-size: 21px; font-weight: 700; margin: 0 0 12px; text-align: center;">New order</h1>
                  
                  <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse; margin: 0 0 24px;"><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Design</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;   ">Midnight Fox</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Order</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;  font-family: ui-monospace, SFMono-Regular, Menlo, monospace; ">abcd1234</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Customer</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;   ">customer@example.com</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Classic Tee</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;   ">Black / M</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Discount</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;   ">HALF</td>
  </tr><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; border-top: 1px solid #e4e4e7;">Total</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b; font-weight: 600;  border-top: 1px solid #e4e4e7;">$14.41</td>
  </tr></table>
                  <p style="margin: 4px 0 0;"><a href="https://prntd.org/admin/orders/abcd1234-5678-90ab-cdef-000000000000" style="display: inline-block; padding: 11px 22px; background: #18181b; color: #fff; text-decoration: none; border-radius: 8px; font-size: 14px; font-weight: 600;">View in admin</a></p>
                </td>
              </tr>
              <tr>
                <td style="border-top: 1px solid #e4e4e7; padding: 20px 28px; text-align: center;">
                  <p style="color: #71717a; font-size: 12px; margin: 0;">PRNTD · <a href="https://prntd.org" style="color: #71717a; text-decoration: none;">prntd.org</a> · <a href="mailto:hello@prntd.org" style="color: #71717a; text-decoration: none;">hello@prntd.org</a></p>
                </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </body>"
`;

exports[`sendOwnerOrderAlert > renders the admin alert with discount and design rows > subject 1`] = `"New order: Midnight Fox — Black M — $14.41"`;

exports[`sendPasswordResetEmail > renders the reset CTA > html 1`] = `
"
    <body style="margin: 0; padding: 0; background: #fafafa;">
      <span style="display:none!important;opacity:0;color:transparent;height:0;width:0;overflow:hidden;">Reset your PRNTD password</span>
      <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background: #fafafa; padding: 32px 16px;">
        <tr>
          <td align="center">
            <table role="presentation" cellpadding="0" cellspacing="0" width="600" style="max-width: 600px; width: 100%; background: #ffffff; border: 1px solid #e4e4e7; border-radius: 16px; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
              <tr>
                <td style="background: #18181b; padding: 18px 28px;">
                  <span style="color: #ffffff; font-size: 18px; font-weight: 700; letter-spacing: 0.18em;">PRNTD</span>
                </td>
              </tr>
              <tr>
                <td style="padding: 32px 28px 36px;">
                  
                  <h1 style="color: #18181b; font-size: 21px; font-weight: 700; margin: 0 0 12px; text-align: center;">Reset your password</h1>
                  <p style="color: #52525b; font-size: 15px; line-height: 1.5; margin: 0 0 24px;">Click the button below to set a new password. This link expires in 1 hour. If you didn't request this, you can ignore this email.</p>
                  
                  <p style="margin: 4px 0 0;"><a href="https://prntd.org/reset-password?token=fixture-token" style="display: inline-block; padding: 11px 22px; background: #18181b; color: #fff; text-decoration: none; border-radius: 8px; font-size: 14px; font-weight: 600;">Reset password</a></p>
                </td>
              </tr>
              <tr>
                <td style="border-top: 1px solid #e4e4e7; padding: 20px 28px; text-align: center;">
                  <p style="color: #71717a; font-size: 12px; margin: 0;">PRNTD · <a href="https://prntd.org" style="color: #71717a; text-decoration: none;">prntd.org</a> · <a href="mailto:hello@prntd.org" style="color: #71717a; text-decoration: none;">hello@prntd.org</a></p>
                </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </body>"
`;

exports[`sendPasswordResetEmail > renders the reset CTA > subject 1`] = `"Reset your password"`;

exports[`sendShippingNotification > with tracking number and URL > html 1`] = `
"
    <body style="margin: 0; padding: 0; background: #fafafa;">
      <span style="display:none!important;opacity:0;color:transparent;height:0;width:0;overflow:hidden;">"Midnight Fox" (order abcd1234) has shipped.</span>
      <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background: #fafafa; padding: 32px 16px;">
        <tr>
          <td align="center">
            <table role="presentation" cellpadding="0" cellspacing="0" width="600" style="max-width: 600px; width: 100%; background: #ffffff; border: 1px solid #e4e4e7; border-radius: 16px; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
              <tr>
                <td style="background: #18181b; padding: 18px 28px;">
                  <span style="color: #ffffff; font-size: 18px; font-weight: 700; letter-spacing: 0.18em;">PRNTD</span>
                </td>
              </tr>
              <tr>
                <td style="padding: 32px 28px 36px;">
                  
    <table role="presentation" cellpadding="0" cellspacing="0" align="center" style="margin: 0 auto 28px;">
      <tr>
        <td align="center" valign="top" style="padding: 0 8px;">
          <div style="background: #f4f4f5; border-radius: 12px; padding: 14px; line-height: 0;">
            <img src="https://mock.example/front-mockup.png" width="200" alt="Front design" style="display: block; width: 200px; max-width: 100%; height: auto; border-radius: 6px;" />
          </div>
          <div style="color: #71717a; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; margin-top: 8px;">Front</div>
        </td>
        <td align="center" valign="top" style="padding: 0 8px;">
          <div style="background: #0c0c0c; border-radius: 12px; padding: 14px; line-height: 0;">
            <img src="https://img.example/back-artwork.png" width="200" alt="Back design" style="display: block; width: 200px; max-width: 100%; height: auto; border-radius: 6px;" />
          </div>
          <div style="color: #71717a; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; margin-top: 8px;">Back</div>
        </td></tr>
    </table>
                  <h1 style="color: #18181b; font-size: 21px; font-weight: 700; margin: 0 0 12px; text-align: center;">Your order is on the way</h1>
                  <p style="color: #52525b; font-size: 15px; line-height: 1.5; margin: 0 0 24px;">"Midnight Fox" (order abcd1234) has shipped.</p>
                  <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse; margin: 0 0 24px;"><tr>
    <td style="padding: 9px 0; color: #71717a; font-size: 14px; ">Tracking #</td>
    <td style="padding: 9px 0; text-align: right; font-size: 14px; color: #18181b;  font-family: ui-monospace, SFMono-Regular, Menlo, monospace; ">1Z999AA10123456784</td>
  </tr></table>
                  <p style="margin: 4px 0 0;"><a href="https://track.example/1Z999AA10123456784" style="display: inline-block; padding: 11px 22px; background: #18181b; color: #fff; text-decoration: none; border-radius: 8px; font-size: 14px; font-weight: 600;">Track your package</a></p>
                </td>
              </tr>
              <tr>
                <td style="border-top: 1px solid #e4e4e7; padding: 20px 28px; text-align: center;">
                  <p style="color: #71717a; font-size: 12px; margin: 0;">PRNTD · <a href="https://prntd.org" style="color: #71717a; text-decoration: none;">prntd.org</a> · <a href="mailto:hello@prntd.org" style="color: #71717a; text-decoration: none;">hello@prntd.org</a></p>
                </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </body>"
`;

exports[`sendShippingNotification > with tracking number and URL > subject 1`] = `"Your order shipped — Midnight Fox"`;

exports[`sendShippingNotification > without tracking info yet > html 1`] = `
"
    <body style="margin: 0; padding: 0; background: #fafafa;">
      <span style="display:none!important;opacity:0;color:transparent;height:0;width:0;overflow:hidden;">Order abcd1234 has shipped.</span>
      <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background: #fafafa; padding: 32px 16px;">
        <tr>
          <td align="center">
            <table role="presentation" cellpadding="0" cellspacing="0" width="600" style="max-width: 600px; width: 100%; background: #ffffff; border: 1px solid #e4e4e7; border-radius: 16px; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
              <tr>
                <td style="background: #18181b; padding: 18px 28px;">
                  <span style="color: #ffffff; font-size: 18px; font-weight: 700; letter-spacing: 0.18em;">PRNTD</span>
                </td>
              </tr>
              <tr>
                <td style="padding: 32px 28px 36px;">
                  
                  <h1 style="color: #18181b; font-size: 21px; font-weight: 700; margin: 0 0 12px; text-align: center;">Your order is on the way</h1>
                  <p style="color: #52525b; font-size: 15px; line-height: 1.5; margin: 0 0 24px;">Order abcd1234 has shipped.</p>
                  <p style="color: #52525b; font-size: 14px; text-align: center; margin: 0 0 24px;">Tracking info will be available soon.</p>
                  
                </td>
              </tr>
              <tr>
                <td style="border-top: 1px solid #e4e4e7; padding: 20px 28px; text-align: center;">
                  <p style="color: #71717a; font-size: 12px; margin: 0;">PRNTD · <a href="https://prntd.org" style="color: #71717a; text-decoration: none;">prntd.org</a> · <a href="mailto:hello@prntd.org" style="color: #71717a; text-decoration: none;">hello@prntd.org</a></p>
                </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </body>"
`;

exports[`sendShippingNotification > without tracking info yet > subject 1`] = `"Your order shipped — abcd1234"`;
